--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 </head>
 
 <body onload="on_load()">
-  <div class="card" id="card">
-    <img src="assets/cards/back.jpg" alt="" srcset="" name="card" id="card"
-      onclick="handle_click()">
+  <div class="card_row">
+    <div class="card_area1" id="card_area1">
+      <img src="assets/cards/back.jpg" alt="" srcset="" name="card1" id="card1" onclick="handle_click(1)">
     </div>
-    
-    <div class="arcana">
-      <h1 name="card_name" id="card_name"></h1>
+  
+    <div class="card_area2" id="card_area2">
+      <img src="assets/cards/back.jpg" alt="" srcset="" name="card2" id="card2" onclick="handle_click(2)">
     </div>
-
-  <div class="info">
-    <p id="card_description" name="card_description"></p>
+  
+    <div class="card_area3" id="card_area3">
+      <img src="assets/cards/back.jpg" alt="" srcset="" name="card3" id="card3" onclick="handle_click(3)">
+    </div>
   </div>
 </body>
 
